k8s/echo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo
  labels:
    name: echo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  namespace: echo
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: mendhak/http-https-echo:31
          ports:
            - containerPort: 8443
            - containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: echo-svc
  namespace: echo
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: echo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/ingress-hostname-source: annotation-only
    # allow only cloudfare sources (https://www.cloudflare.com/en-gb/ips/)
    nginx.ingress.kubernetes.io/whitelist-source-range: "173.245.48.0/20,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,141.101.64.0/18,108.162.192.0/18,190.93.240.0/20,188.114.96.0/20,197.234.240.0/22,198.41.128.0/17,162.158.0.0/15,104.16.0.0/13,104.24.0.0/14,172.64.0.0/13,131.0.72.0/22"
spec:
  rules:
    - host: "murfzw.online"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-svc
                port:
                  number: 80
    - host: "*.murfzw.online"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-svc
                port:
                  number: 80
  tls:
    - hosts:
        - murfzw.online
      secretName: murfzw-online-tls
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    name: test
